# nuDemo

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
config/: defaults.toml  docker-compose.yml  init.sql  postgres-init.sql
config/grafana/dashboards/: nudemo-backend-comparison.json  nudemo-observability.json  nudemo-query-monitor.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: postgres.yml  prometheus.yml
config/prometheus/: prometheus.yml
scripts/: README.md  bootstrap.sh  bootstrap_env.sh  build_comparative_summary.py  check_env.sh  download_nuscenes_trainval.sh  overnight_batched_study.py  render_reports_index.py  run_benchmark.sh  run_benchmarks.sh  run_extract.sh  run_indexing.sh  run_kafka.sh  run_overnight_batched_study.sh  run_pylint.sh  run_render.sh  run_storage.sh  run_tasks.sh  run_telemetry.sh  serve_explorer.sh  serve_reports.sh
scripts/lib/: nudemo_common.sh
src/nudemo/: __init__.py  cli.py  config.py  rendering.py
src/nudemo/benchmarks/: __init__.py  backends.py  export.py  models.py  orchestrator.py  runner.py  synthetic.py
src/nudemo/domain/: __init__.py  models.py
src/nudemo/explorer/: __init__.py  app.py  media.py
src/nudemo/extraction/: __init__.py  providers.py
src/nudemo/ingestion/: __init__.py  kafka.py
src/nudemo/mining/: __init__.py  embeddings.py  exports.py  service.py  store.py  tracks.py
src/nudemo/observability/: __init__.py  metrics.py
src/nudemo/reporting/: __init__.py  dashboard.py
src/nudemo/storage/: __init__.py  base.py  elasticsearch_store.py  lance_store.py  minio_postgres.py  parquet_store.py  redis_store.py  track_elasticsearch_store.py  webdataset_store.py
src/nudemo/studies/: __init__.py  batched_ingest.py
src/nudemo/telemetry/: __init__.py  dashboard.py  docker.py  store.py
tests/: test_batched_study.py  test_benchmark_models.py  test_benchmarks.py  test_cli.py  test_explorer_media.py  test_explorer_report_summary.py  test_export_reporting.py  test_ingestion.py  test_mining_api.py  test_mining_service.py  test_models.py  test_parquet_store.py  test_redis_store.py  test_rendering.py  test_report_contracts.py  test_scene_studio.py  test_synthetic_flow.py  test_telemetry.py  test_track_workflows.py  test_unified_search.py
